--- a/week4/todo/package.json
+++ b/week4/todo/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.56.0",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-local-auth": "^1.5.0",
+    "react-native-passcode-status": "^1.1.1",
     "react-native-touch-id": "^4.0.4",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.6.2",
